--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "Facundo Lozano",
   "license": "ISC",
   "dependencies": {
     "express": "^4.19.2",
