--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.19.2",
+    "mysql2": "^3.10.0",
     "sequelize": "^6.37.3",
     "tedious": "^18.2.0"
   }
