--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Facundo Lozano",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "express": "^4.19.2",
     "mysql2": "^3.10.0",
     "sequelize": "^6.37.3",
