--- a/package.json
+++ b/package.json
@@ -8,14 +8,15 @@
     "start": "node .",
     "dev": "node --watch .",
     "test": "echo \"Error: no test specified\" && exit 1"
-    
   },
   "keywords": [],
   "author": "Facundo Lozano",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.6",
     "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.10.0",
     "sequelize": "^6.37.3",
     "tedious": "^18.2.0"
